2009-08-07  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to b68, remove additional -source option.
	* generated/java/nio/channels/AcceptPendingException.java,
	* generated/java/nio/channels/IllegalChannelGroupException.java,
	* generated/java/nio/channels/InterruptedByTimeoutException.java,
	* generated/java/nio/channels/ReadPendingException.java,
	* generated/java/nio/channels/ShutdownChannelGroupException.java,
	* generated/java/nio/channels/WritePendingException.java,
	* generated/sun/nio/fs/UnixConstants.java:
	Add generated files.
	* javac.in: Update to build 1.7 code.
	* patches/ecj/icedtea.patch: Remove patch removing use of 1.6
	source and target options.
	* patches/icedtea-clean-crypto.patch: Regenerated.
	* patches/xrender/icedtea-007.patch: Remove non-ASCII characters.

2009-08-07  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ADD_ZERO_CONFIGURE_ARGS): Add configure options
	for --with-*-src-zip= if not specified.

2009-08-06  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ADD_ZERO_CONFIGURE_ARGS): Adjust for added/removed
	configuration options.

2009-08-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to b67.
	
2009-08-06  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_ENV, ICEDTEA_ENV_ECJ): Allow passing
	as environment.
	
2009-08-06  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES): Make $(DISTRIBUTION_PATCHES) the
	last patches in the list.

2009-08-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump JDK changeset to obtain execvpe fix.

2009-08-05  Mark Wielaard  <mjw@redhat.com>

	* patches/icedtea-systemtap.patch: Remove workaround for nmethod.cpp.
	* tapset/hotspot.stp.in: Add tapset functions for
	hotspot.method_entry, hotspot.method_return,
	hotspot.compiled_method_load and hotspot.compiled_method_unload.
	* NEWS: Metion new support for java method tracing.
	* INSTALL: Add that java method tracing support needs systemtap
	0.9.9 or higher.
